# rust-axum-google-discord-oauth2

./: .env-example  Cargo.toml  LICENSE  README.md
nuxt-example/: README.md  nuxt.config.ts  package-lock.json
nuxt-example/pages/: index.vue
src/: main.rs
