[package]
name = "rust-axum-google-discord-oauth2"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.89"
async-session = { version = "3.0.0"}
axum = { version = "0.7.5"}
axum-extra = { version="0.9.3", features = ["typed-header"] }
http = "1.1.0"
oauth2 = "4.4.2"
# Use Rustls because it makes it easier to cross-compile on CI
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
redis = "0.27.2"
async-redis-session-v2 = "0.2.3"